force-app/main/default/objects/SM_Payment_Method__c/SM_Payment_Method__c.object-meta.xml
<CustomObject>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>