force-app/main/default/objects/SM_Payment_Method__c/fields/ACH_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>ACH_Bank_Name__c</fullName>
    <label>ACH Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATHOL SAVING BANK</fullName>
            </value>
            <value>
                <fullName>BANCO POPULAR</fullName>
            </value>
            <value>
                <fullName>BANCO SANTANDER</fullName>
            </value>
            <value>
                <fullName>BANK OF AMERICA - HENRICO</fullName>
            </value>
            <value>
                <fullName>BAXTER CREDIT UNIÓN</fullName>
            </value>
            <value>
                <fullName>BBT</fullName>
            </value>
            <value>
                <fullName>CAGUAS COOP</fullName>
            </value>
            <value>
                <fullName>CAPITAL ONE</fullName>
            </value>
            <value>
                <fullName>CARIBE FEDERAL CREDIT UNION</fullName>
            </value>
            <value>
                <fullName>CHASE FLORIDA</fullName>
            </value>
            <value>
                <fullName>COOP A/C  ABRAHM ROSA</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE ADJUNTAS</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE AGUADA</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE AIBONITEÑA</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE CABO ROJO</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE CAMUY (CAMUYCOOP)</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE CAPARRA</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE CIALES</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE CUPEY ALTO</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE FLORIDA</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE GUAYANILLA</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE HATILLO</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE ISABELA</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE JUANA DIAZ</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE LAJAS</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE LARES</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE LAS PIEDRAS</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE MANATI</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE PADRE MC DONALD</fullName>
            </value>
            <value>
                <fullName>COOP A/C DE RINCON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>