force-app/main/default/objects/SM_Payment_Method__c/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <label>Billing Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>