force-app/main/default/objects/SM_Payment_Method__c/fields/CB_Payment_Method_Id__c.field-meta.xml
<CustomField>
    <fullName>CB_Payment_Method_Id__c</fullName>
    <label>CB Payment Method Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>