force-app/main/default/objects/SM_Payment_Method__c/fields/Credit_Card_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_First_Name__c</fullName>
    <label>Credit Card First Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>