force-app/main/default/objects/SM_Payment_Method__c/fields/Credit_Card_Number_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number_4_Digits__c</fullName>
    <label>Credit_Card_Number 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>