force-app/main/default/objects/SM_Payment_Method__c/fields/CS_Instrument_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CS_Instrument_Identifier__c</fullName>
    <label>CS Instrument Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>