force-app/main/default/objects/SM_Payment_Method__c/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>