force-app/main/default/objects/SM_Payment_Method__c/fields/Gateway_Account__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Account__c</fullName>
    <label>Gateway Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>