force-app/main/default/objects/SM_Payment_Method__c/fields/Gateway_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Reference_Id__c</fullName>
    <label>Gateway Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>