force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Account__c.field-meta.xml
<CustomField>
    <fullName>SM_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments Methods</relationshipLabel>
    <relationshipName>Payments_Methods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>