force-app/main/default/objects/SM_Payment_Method__c/fields/SM_ACH_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_ACH_Account_Number__c</fullName>
    <label>ACH Account Number</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>