force-app/main/default/objects/SM_Payment_Method__c/fields/SM_ACH_Account_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_ACH_Account_Routing_Number__c</fullName>
    <label>ACH Account Routing Number</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>