force-app/main/default/objects/SM_Payment_Method__c/fields/SM_ACH_Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_ACH_Bank_Number__c</fullName>
    <label>ACH Bank Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>