force-app/main/default/objects/SM_Payment_Method__c/fields/SM_ACH_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_ACH_Full_Name__c</fullName>
    <label>ACH Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>