force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Active__c.field-meta.xml
<CustomField>
    <fullName>SM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>