force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Address_Aditional__c.field-meta.xml
<CustomField>
    <fullName>SM_Address_Aditional__c</fullName>
    <label>Address Aditional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>