force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Bank__c.field-meta.xml
<CustomField>
    <fullName>SM_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank</label>
    <referenceTo>SM_Bank__c</referenceTo>
    <relationshipLabel>Payments Methods</relationshipLabel>
    <relationshipName>Payments_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>