force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Card_Token__c.field-meta.xml
<CustomField>
    <fullName>SM_Card_Token__c</fullName>
    <description>The token that&apos;s going to be used</description>
    <inlineHelpText>The token that&apos;s going to be used</inlineHelpText>
    <label>Card Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>