force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Case_Number__c</fullName>
    <label>Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>