force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Chargent_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Chargent_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Order from which the authorization was made</description>
    <inlineHelpText>The Order from which the authorization was made</inlineHelpText>
    <label>Chargent Order</label>
    <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
    <relationshipLabel>Payments Methods</relationshipLabel>
    <relationshipName>Payments_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>