force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Credit_Card_CVV__c.field-meta.xml
<CustomField>
    <fullName>SM_Credit_Card_CVV__c</fullName>
    <label>Credit Card CVV</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>