force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Credit_Card_Franchise__c.field-meta.xml
<CustomField>
    <fullName>SM_Credit_Card_Franchise__c</fullName>
    <description>The franchise of the card(Visa, MasterCard, E.T.C.)</description>
    <inlineHelpText>The franchise of the card(Visa, MasterCard, E.T.C.)</inlineHelpText>
    <label>Credit Card Fanchise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>