force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Credit_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Credit_Card_Name__c</fullName>
    <description>This is the Name of the Card Holder</description>
    <inlineHelpText>This is the Name of the Card Holder</inlineHelpText>
    <label>SM Credit Card Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>