force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Credit_Card_Number__c</fullName>
    <label>Credit_Card_Number</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>