force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Is_migrated__c.field-meta.xml
<CustomField>
    <fullName>SM_Is_migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is migrated?</label>
    <type>Checkbox</type>
</CustomField>