force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Is_Tokenized__c.field-meta.xml
<CustomField>
    <fullName>SM_Is_Tokenized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks This Payment method as already tokenized</description>
    <inlineHelpText>Marks This Payment method as already tokenized</inlineHelpText>
    <label>Is Tokenized</label>
    <type>Checkbox</type>
</CustomField>