force-app/main/default/objects/SM_Payment_Method__c/fields/SM_License__c.field-meta.xml
<CustomField>
    <fullName>SM_License__c</fullName>
    <label>License</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>