force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Migration_Date__c</fullName>
    <label>Migration Date</label>
    <type>Date</type>
</CustomField>