force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Origin_Name__c</fullName>
    <label>Origin Name</label>
    <length>23</length>
    <type>Text</type>
</CustomField>