force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Routing_Number__c</fullName>
    <formula>SM_Bank__r.SM_Routing_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Routing Number</label>
    <type>Text</type>
</CustomField>