force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Routing_Number_Check_Digit__c.field-meta.xml
<CustomField>
    <fullName>SM_Routing_Number_Check_Digit__c</fullName>
    <formula>(RIGHT(SM_Bank__r.SM_Routing_Number__c , 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Routing Number Check Digit</label>
    <type>Text</type>
</CustomField>