force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Third_Person__c.field-meta.xml
<CustomField>
    <fullName>SM_Third_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payment method belongs to third person</description>
    <inlineHelpText>Payment method belongs to third person</inlineHelpText>
    <label>Third-Person</label>
    <type>Checkbox</type>
</CustomField>