force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Tokenization_status__c.field-meta.xml
<CustomField>
    <fullName>SM_Tokenization_status__c</fullName>
    <label>Tokenization status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Tokenized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>