force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MASTERCARD</fullName>
            </value>
            <value>
                <fullName>VISA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>