force-app/main/default/objects/SM_Payment_Method__c/fields/SM_Unique_id__c.field-meta.xml
<CustomField>
    <fullName>SM_Unique_id__c</fullName>
    <formula>SM_Account__c &amp; &quot;-&quot; &amp;  TEXT( ACH_Account_Type__c ) &amp; &quot;-&quot; &amp;  SM_Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique id</label>
    <type>Text</type>
</CustomField>