force-app/main/default/objects/SM_Payment_Method__c/fields/Tokenization_error_detail__c.field-meta.xml
<CustomField>
    <fullName>Tokenization_error_detail__c</fullName>
    <label>Tokenization error detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>