force-app/main/default/objects/SM_Payment_Method__c/recordTypes/SM_ACH.recordType-meta.xml
<RecordType>
    <fullName>SM_ACH</fullName>
    <active>true</active>
    <label>ACH</label>
</RecordType>