force-app/main/default/objects/SM_Payment_Method__c/validationRules/PaymentMethod001.validationRule-meta.xml
<ValidationRule>
    <fullName>PaymentMethod001</fullName>
    <active>false</active>
    <description>Card Token Must be provided</description>
    <errorConditionFormula>AND(SM_Card_Token__c==Null, RecordType.DeveloperName =&apos;Credit_Card&apos;)</errorConditionFormula>
    <errorMessage>This record cannot be created Manually</errorMessage>
</ValidationRule>