force-app/main/default/objects/SM_Payment_Method__c/validationRules/PM002_Account_not_Received_Letters.validationRule-meta.xml
<ValidationRule>
    <fullName>PM002_Account_not_Received_Letters</fullName>
    <active>true</active>
    <description>No permite el registro de letras o caracteres especiales en el campo ACH Account Number (SM_ACH_Account_Number__c)</description>
    <errorConditionFormula>!REGEX(SM_ACH_Account_Number__c,&quot;[0-9]*&quot;)</errorConditionFormula>
    <errorDisplayField>SM_ACH_Account_Number__c</errorDisplayField>
    <errorMessage>PM002 - This field only receives numbers</errorMessage>
</ValidationRule>