force-app/main/default/objects/SM_Payment_Method__c/validationRules/PM003_ACH_Banco_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>PM003_ACH_Banco_Obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &quot;ACH&quot;, OR(ISBLANK(SM_Bank__c), ISNULL(SM_Bank__c)))</errorConditionFormula>
    <errorMessage>PM003 - Para registros de tipo ACH, es obligatorio el registro de un Banco</errorMessage>
</ValidationRule>