force-app/main/default/objects/SM_Payment_Method__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SM_Active__c</columns>
    <columns>NAME</columns>
    <columns>SM_Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SM_Chargent_Order__c</columns>
    <columns>ACH_Account_Type__c</columns>
    <columns>SM_ACH_Bank_Number__c</columns>
    <columns>SM_Card_Token__c</columns>
    <columns>SM_ACH_Account_Routing_Number__c</columns>
    <columns>ACH_Bank_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>