force-app/main/default/objects/SM_Payment_Method__c/listViews/All_payment_methods.listView-meta.xml
<ListView>
    <fullName>All_payment_methods</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>SM_ACH_Account_Number__c</columns>
    <columns>SM_ACH_Account_Routing_Number__c</columns>
    <columns>ACH_Account_Type__c</columns>
    <columns>ACH_Bank_Name__c</columns>
    <columns>SM_ACH_Bank_Number__c</columns>
    <columns>SM_ACH_Full_Name__c</columns>
    <columns>SM_Bank__c</columns>
    <columns>SM_Credit_Card_expiration_month__c</columns>
    <columns>SM_Credit_Card_expiration_year__c</columns>
    <columns>SM_Credit_Card_Number__c</columns>
    <columns>SM_Routing_Number__c</columns>
    <columns>SM_Credit_Card_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All payment methods</label>
</ListView>